force-app/main/default/objects/Forbearance__c/Forbearance__c.object-meta.xml
<CustomObject>
    <description>Forbearance is when your mortgage servicer or lender allows you to temporarily pay your mortgage at a lower payment or pause paying your mortgage. You will have to pay the payment reduction or the paused payments back later.</description>
    <label>Forbearance</label>
    <nameField>
        <displayFormat>FB-{00000}</displayFormat>
        <label>Forbearance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forbearances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>