force-app/main/default/objects/Forbearance__c/fields/Appraisal_Ordered_Date__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Ordered_Date__c</fullName>
    <label>Appraisal Ordered Date</label>
    <type>Date</type>
</CustomField>