force-app/main/default/objects/Forbearance__c/fields/Appraisal_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Received_Date__c</fullName>
    <label>Appraisal Received Date</label>
    <type>Date</type>
</CustomField>