force-app/main/default/objects/Forbearance__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Borrower Declined</fullName>
            </value>
            <value>
                <fullName>Buyer Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Remedy Plan Changed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>