force-app/main/default/objects/Forbearance__c/fields/Current_Asset_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Asset_Maturity_Date__c</fullName>
    <label>Current Asset Maturity Date</label>
    <type>Date</type>
</CustomField>