force-app/main/default/objects/Forbearance__c/fields/Current_Asset_Maturity_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Current_Asset_Maturity_Date_Formula__c</fullName>
    <formula>Property__r.Current_Asset_Maturity_Date__c</formula>
    <inlineHelpText>This date is populated at the Deal level and can provide an updated date by which the asset needs to be paid off. This date can be updated.</inlineHelpText>
    <label>Current Asset Maturity Date</label>
    <type>Date</type>
</CustomField>