force-app/main/default/objects/Forbearance__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Forbearances</relationshipLabel>
    <relationshipName>Forbearances</relationshipName>
    <type>Lookup</type>
</CustomField>