force-app/main/default/objects/Forbearance__c/fields/Docs_Received_From_Legal_Date__c.field-meta.xml
<CustomField>
    <fullName>Docs_Received_From_Legal_Date__c</fullName>
    <label>Docs Received From Legal Date</label>
    <type>Date</type>
</CustomField>