force-app/main/default/objects/Forbearance__c/fields/Forbearance__c.field-meta.xml
<CustomField>
    <fullName>Forbearance__c</fullName>
    <label>Forbearance #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>