force-app/main/default/objects/Forbearance__c/fields/Forbearance_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Forbearance_Completed_Date__c</fullName>
    <label>Forbearance Completed Date</label>
    <type>Date</type>
</CustomField>