force-app/main/default/objects/Forbearance__c/fields/Forbearance_Fee__c.field-meta.xml
<CustomField>
    <fullName>Forbearance_Fee__c</fullName>
    <label>Forbearance Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>