force-app/main/default/objects/Forbearance__c/fields/Forbearance_Fee_Percent__c.field-meta.xml
<CustomField>
    <fullName>Forbearance_Fee_Percent__c</fullName>
    <label>Forbearance Fee (%)</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>