force-app/main/default/objects/Forbearance__c/fields/Forbearance_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Forbearance_Start_Date__c</fullName>
    <label>Forbearance Start Date</label>
    <type>Date</type>
</CustomField>