force-app/main/default/objects/Forbearance__c/fields/Loan_Approval_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Approval_Approved_Date__c</fullName>
    <label>Loan Approval Approved Date</label>
    <type>Date</type>
</CustomField>