force-app/main/default/objects/Forbearance__c/fields/Loan_Approval_From_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Approval_From_Start_Date__c</fullName>
    <label>Loan Approval From Start Date</label>
    <type>Date</type>
</CustomField>