force-app/main/default/objects/Forbearance__c/fields/Original_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Original_Interest_Rate__c</fullName>
    <label>Original Interest Rate</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>