force-app/main/default/objects/Forbearance__c/fields/Original_Interest_Rate_Formula__c.field-meta.xml
<CustomField>
    <fullName>Original_Interest_Rate_Formula__c</fullName>
    <formula>Property__r.Original_Interest_Rate__c</formula>
    <label>Original Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>