force-app/main/default/objects/Forbearance__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pandemic</fullName>
            </value>
            <value>
                <fullName>COVID-19</fullName>
            </value>
            <value>
                <fullName>Economic Downturn</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Construction Delay</fullName>
            </value>
            <value>
                <fullName>In House Refi</fullName>
            </value>
            <value>
                <fullName>Outside Refi</fullName>
            </value>
            <value>
                <fullName>Sale Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>