force-app/main/default/objects/Forbearance__c/fields/Reason_Description__c.field-meta.xml
<CustomField>
    <fullName>Reason_Description__c</fullName>
    <inlineHelpText>Provide further details regarding the reason for this Forbearance</inlineHelpText>
    <label>Reason Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>