force-app/main/default/objects/Forbearance__c/validationRules/Dates_Cannot_Change_After_Deal_CloseStag.validationRule-meta.xml
<ValidationRule>
    <fullName>Dates_Cannot_Change_After_Deal_CloseStag</fullName>
    <active>true</active>
    <description>Dates cannot be changed after deal has closed won. Please contact your administrator.</description>
    <errorConditionFormula>AND( ISPICKVAL(Property__r.Deal__r.StageName, &apos;Closed Won&apos;) ,
OR(ISCHANGED(Loan_Approval_From_Start_Date__c),ISCHANGED(Docs_Received_From_Legal_Date__c),ISCHANGED(Docs_Requested_From_Legal_Date__c), ISCHANGED(Loan_Approval_Approved_Date__c)),

$Profile.Name &lt;&gt;&apos;System Administrator&apos;

)</errorConditionFormula>
    <errorMessage>Diligence item Date cannot be changed once Deal is Closed Won. Please contact your administrator.</errorMessage>
</ValidationRule>