force-app/main/default/objects/Forbearance__c/validationRules/Require_Cancel_Reason_When_Cancelled.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Cancel_Reason_When_Cancelled</fullName>
    <active>true</active>
    <description>This will require that the User selects a Cancellation Reason when updating the Status to &quot;Cancelled&quot;</description>
    <errorConditionFormula>AND(
ISPICKVAL( Status__c , &quot;Cancelled&quot;),
ISBLANK(TEXT(Cancellation_Reason__c))
)</errorConditionFormula>
    <errorMessage>Please select a Cancellation Reason</errorMessage>
</ValidationRule>